@@ -2633,3 +2633,4 @@ that made reds into blues and vice versa, which has been fixed.
 
 Added i/o for spectral pictures to rmtxop, the first program that can
 ingest them.  (Only rtrace, rcontrib, and rfluxmtx can render them.)
+Also added spectral picture support to rcrop.
